@@ -2,7 +2,8 @@ package cz.matfyz.core.utils.io;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 /**
  * @author jachym.bartik
@@ -16,8 +17,11 @@ public class UrlInputStreamProvider implements InputStreamProvider {
     }
 
     public InputStream getInputStream() throws IOException {
-        final var fileUrl = new URL(url);
-        return fileUrl.openStream();
+        try {
+            return new URI(url).toURL().openStream();
+        } catch (URISyntaxException e) {
+            throw new IOException(e);
+        }
     }
 
 }
